--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  numberpicker: "^0.1.0"
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
@@ -18,9 +21,11 @@ flutter:
 
   # To add assets to your application, add an assets section here, in
   # this "flutter" section, as in:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/penny.png
+    - images/nickel.png
+    - images/dime.png
+    - images/quarter.png
 
   # To add assets from package dependencies, first ensure the asset
   # is in the lib/ directory of the dependency. Then,
@@ -30,8 +35,11 @@ flutter:
   #
   # Here is an example:
   #
-  # assets:
-  #  - packages/PACKAGE_NAME/path/to/asset
+#  assets:
+#    - packages/images/penny.png
+#    - packages/images/nickel.png
+#    - packages/images/dime.png
+#    - packages/images/quarter.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
