Now it can generate a statement. A very basic statement.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
 
   numberpicker: "^0.1.0"
 
+  android_intent: "^0.0.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
