--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ dependencies:
 
   numberpicker: "^0.1.0"
 
-  android_intent: "^0.0.2"
+  android_intent: "^0.2.0"
+
+  http_auth: ^0.2.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
